--- a/base.ini
+++ b/base.ini
@@ -55,6 +55,6 @@ custom_proxy_group=⛔ 应用净化`select`[]REJECT`[]DIRECT
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/OrangeChu/StepChange/main/base.yaml?token=GHSAT0AAAAAACQZELVUR4M4OQVY6QITJKCIZW7RX3A
+clash_rule_base=https://raw.githubusercontent.com/OrangeChu/ACL4SSR/main/base.yaml
 
 ;luck
